# glxtension

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  glxtension.pro  resources.qrc
glxtension/: gl_helper_widget.h  main_window.cpp  main_window.h  main_window.ui
source/glxtension/: gl_helper_widget.h  main.cpp  main_window.cpp  main_window.h  main_window.ui
